# pdf2md

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/pdf2md/: __init__.py  __main__.py  app.py  bootstrap.py  converter.py
